mybatis 导入日志依赖01

--- a/pro-child01-module/pom.xml
+++ b/pro-child01-module/pom.xml
@@ -15,8 +15,12 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    <!--日志依赖-->
     <dependencies>
-
+        <!--日志依赖-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 </project>
