--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>pro-child01-module</module>
         <module>pro-child02-module</module>
+        <module>pro-child03-module</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
