--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /pro-child03-module/target/test-classes/
 /pro-child03-module/target/classes/
+/pro-child04-module/target/test-classes/
+/pro-child04-module/target/classes/
