--- a/pro-child04-module/src/main/resources/jdbc.properties
+++ b/pro-child04-module/src/main/resources/jdbc.properties
@@ -1,14 +1,14 @@
-wechat.dev.driver=com.mysql.cj.jdbc.Driver
-wechat.dev.url=jdbc:mysql://localhost:3306/mybatis_example?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
-wechat.dev.username=root
-wechat.dev.password=547547
+jdbc.div.driver=com.mysql.cj.jdbc.Driver
+jdbc.div.url=jdbc:mysql://localhost:3306/mybatis_example?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+jdbc.div.username=root
+jdbc.div.password=547547
 
-wechat.test.driver=com.mysql.cj.jdbc.Driver
-wechat.test.url=jdbc:mysql://localhost:3306/mybatis_example?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
-wechat.test.username=root
-wechat.test.password=547547
+jdbc.test.driver=com.mysql.cj.jdbc.Driver
+jdbc.test.url=jdbc:mysql://localhost:3306/mybatis_example?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+jdbc.test.username=root
+jdbc.test.password=547547
 
-wechat.product.driver=com.mysql.cj.jdbc.Driver
-wechat.product.url=jdbc:mysql://localhost:3306/mybatis_example?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
-wechat.product.username=root
-wechat.product.password=547547
+jdbc.product.driver=com.mysql.cj.jdbc.Driver
+jdbc.product.url=jdbc:mysql://localhost:3306/mybatis_example?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+jdbc.product.username=root
+jdbc.product.password=547547
