--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+/pro-child01-module/target/test-classes/
+/pro-child01-module/target/classes/
+/pro-child02-module/target/test-classes/
+/pro-child02-module/target/classes/
 /pro-child03-module/target/test-classes/
 /pro-child03-module/target/classes/
 /pro-child04-module/target/test-classes/
 /pro-child04-module/target/classes/
+/pro-child05-module/target/test-classes/
+/pro-child05-module/target/classes/
