spring practice01 init

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.idea
+
+*.iml
+
 /pro-child01-module/target/test-classes/
 /pro-child01-module/target/classes/
 /pro-child02-module/target/test-classes/
