spring practice01 re-init_1

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>pro-child02-module</module>
         <module>pro-child03-module</module>
         <module>pro-child04-module</module>
+        <module>pro-child05-module</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
