--- a/pro-child05-module/src/main/resources/jdbc.properties
+++ b/pro-child05-module/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatis_example
+jdbc.url=jdbc:mysql://localhost:3306/fisher
 jdbc.username=root
 jdbc.password=547547
